--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@
 *.userosscache
 *.sln.docstates
 
+# Visual Studio Solution Files
+*.vcxproj
+*.vcxproj.filters
+*.sln
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
