--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+ouzo.dir
 
 # Visual Studio Solution Files
 *.vcxproj
@@ -26,6 +27,7 @@ build/
 bld/
 [Bb]in/
 [Oo]bj/
+Win32/
 
 # Visual Studio 2015 cache/options directory
 .vs/
