--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,13 @@ IF(UNIX)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 ENDIF()
 
-SET(BIN_DIR ${OUZO_SOURCE_DIR}/bin)
+SET(BIN_DIR ${CMAKE_SOURCE_DIR}/bin)
 
 # Define OUZO_DEBUG in debug mode.
 SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DOUZO_DEBUG")
+
+FIND_PACKAGE(OpenGL REQUIRED)
+FIND_PACKAGE(GLFW REQUIRED)
+
+INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include)
+TARGET_LINK_LIBRARIES(ouzo ${OPENGL_gl_LIBRARY} ${GLFW_LIBRARY})
