Added GLM to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DOUZO_DEBUG")
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(GLFW REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
+FIND_PACKAGE(GLM REQUIRED)
 
-INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include)
+INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include)
 TARGET_LINK_LIBRARIES(ouzo ${GLEW_LIBRARIES} ${OPENGL_gl_LIBRARY} ${GLFW_LIBRARY})
