--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,13 @@ SET(BIN_DIR ${CMAKE_SOURCE_DIR}/bin)
 # Define OUZO_DEBUG in debug mode.
 SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DOUZO_DEBUG")
 
+MARK_AS_ADVANCED(CLEAR SOIL_INCLUDE_DIR SOIL_LIBRARY)
+
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(GLFW REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 FIND_PACKAGE(GLM REQUIRED)
+FIND_PACKAGE(SOIL REQUIRED)
 
-INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include)
-TARGET_LINK_LIBRARIES(ouzo ${GLEW_LIBRARIES} ${OPENGL_gl_LIBRARY} ${GLFW_LIBRARY})
+INCLUDE_DIRECTORIES(${SOIL_INCLUDE_DIR} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include)
+TARGET_LINK_LIBRARIES(ouzo ${SOIL_LIBRARY} ${GLEW_LIBRARIES} ${OPENGL_gl_LIBRARY} ${GLFW_LIBRARY})
