--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(GLFW REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 FIND_PACKAGE(GLM REQUIRED)
-FIND_PACKAGE(SOIL REQUIRED)
+FIND_PACKAGE(FreeImage REQUIRED)
 
-INCLUDE_DIRECTORIES(${SOIL_INCLUDE_DIR} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include)
-TARGET_LINK_LIBRARIES(ouzo ${SOIL_LIBRARY} ${GLEW_LIBRARIES} ${OPENGL_gl_LIBRARY} ${GLFW_LIBRARY})
+INCLUDE_DIRECTORIES(${FREEIMAGE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include)
+TARGET_LINK_LIBRARIES(ouzo ${FREEIMAGE_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_gl_LIBRARY} ${GLFW_LIBRARY})
