Fixed CMake not linking GLFW properly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,10 @@ SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DOUZO_DEBUG")
 MARK_AS_ADVANCED(CLEAR SOIL_INCLUDE_DIR SOIL_LIBRARY)
 
 FIND_PACKAGE(OpenGL REQUIRED)
-FIND_PACKAGE(GLFW REQUIRED)
+FIND_PACKAGE(GLFW3 REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 FIND_PACKAGE(GLM REQUIRED)
 FIND_PACKAGE(FreeImage REQUIRED)
 
-INCLUDE_DIRECTORIES(${FREEIMAGE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include)
-TARGET_LINK_LIBRARIES(ouzo ${FREEIMAGE_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_gl_LIBRARY} ${GLFW_LIBRARY})
+INCLUDE_DIRECTORIES(${FREEIMAGE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${GLFW3_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include)
+TARGET_LINK_LIBRARIES(ouzo ${FREEIMAGE_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_gl_LIBRARY} ${GLFW3_LIBRARY})
