Made the game work on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ SET(BIN_DIR ${CMAKE_SOURCE_DIR}/bin)
 # Define OUZO_DEBUG in debug mode.
 SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DOUZO_DEBUG")
 
-MARK_AS_ADVANCED(CLEAR SOIL_INCLUDE_DIR SOIL_LIBRARY)
+MARK_AS_ADVANCED(CLEAR FREEIMAGE_INCLUDE_DIRS)
 
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(GLFW3 REQUIRED)
