Switched to SDL2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,11 +23,11 @@ SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DOUZO_DEBUG")
 MARK_AS_ADVANCED(CLEAR FREEIMAGE_INCLUDE_DIRS)
 
 FIND_PACKAGE(OpenGL REQUIRED)
-FIND_PACKAGE(GLFW3 REQUIRED)
+FIND_PACKAGE(SDL2 REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 FIND_PACKAGE(GLM REQUIRED)
 FIND_PACKAGE(FreeImage REQUIRED)
 FIND_PACKAGE(Freetype REQUIRED)
 
-INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS} ${FREEIMAGE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${GLFW3_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include)
-TARGET_LINK_LIBRARIES(ouzo ${FREETYPE_LIBRARIES} ${FREEIMAGE_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_gl_LIBRARY} ${GLFW3_LIBRARY})
+INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS} ${FREEIMAGE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${SDL2_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include)
+TARGET_LINK_LIBRARIES(ouzo ${FREETYPE_LIBRARIES} ${FREEIMAGE_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_gl_LIBRARY} ${SDL2_LIBRARY})
