Simple Direct3D initialisation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,5 +30,26 @@ FIND_PACKAGE(GLM REQUIRED)
 FIND_PACKAGE(FreeImage REQUIRED)
 FIND_PACKAGE(Freetype REQUIRED)
 
-INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS} ${FREEIMAGE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${SDL2_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include)
-TARGET_LINK_LIBRARIES(ouzo ${FREETYPE_LIBRARIES} ${FREEIMAGE_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_gl_LIBRARY} ${SDL2_LIBRARY})
+IF(WIN32)
+	FIND_PACKAGE(DirectX REQUIRED)
+ENDIF()
+
+INCLUDE_DIRECTORIES(	${FREETYPE_INCLUDE_DIRS} 
+			${FREEIMAGE_INCLUDE_DIRS} 
+			${GLM_INCLUDE_DIRS}
+			${GLEW_INCLUDE_DIRS}
+			${OPENGL_INCLUDE_DIR}
+			${SDL2_INCLUDE_DIR}
+			${CMAKE_SOURCE_DIR}/include	)
+
+TARGET_LINK_LIBRARIES(	ouzo 
+			${FREETYPE_LIBRARIES}
+			${FREEIMAGE_LIBRARIES}
+			${GLEW_LIBRARIES}
+			${OPENGL_gl_LIBRARY}
+			${SDL2_LIBRARY}	)
+
+IF(WIN32)
+	INCLUDE_DIRECTORIES(${DirectX_D3D11_INCLUDE_DIR})
+	TARGET_LINK_LIBRARIES(ouzo ${DirectX_D3D11_LIBRARY})
+ENDIF()
