--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ PROJECT(ouzo)
 # Finds all source files and adds them.
 FILE(GLOB_RECURSE OUZO_SRC "src/*.cpp")
 FILE(GLOB_RECURSE OUZO_HEADERS "include/*.h" "include/*.hpp")
-ADD_EXECUTABLE(ouzo ${OUZO_SRC} ${OUZO_HEADERS})
+
+ADD_EXECUTABLE(ouzo ${OUZO_SRC} ${OUZO_HEADERS} ${OUZO_HLSL_SHADERS})
 
 # Fetch modules from ./cmake/Modules
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules")
@@ -34,22 +35,26 @@ IF(WIN32)
 	FIND_PACKAGE(DirectX REQUIRED)
 ENDIF()
 
-INCLUDE_DIRECTORIES(	${FREETYPE_INCLUDE_DIRS} 
-			${FREEIMAGE_INCLUDE_DIRS} 
-			${GLM_INCLUDE_DIRS}
-			${GLEW_INCLUDE_DIRS}
-			${OPENGL_INCLUDE_DIR}
-			${SDL2_INCLUDE_DIR}
-			${CMAKE_SOURCE_DIR}/include	)
+INCLUDE_DIRECTORIES(	
+	${FREETYPE_INCLUDE_DIRS} 
+	${FREEIMAGE_INCLUDE_DIRS} 
+	${GLM_INCLUDE_DIRS}
+	${GLEW_INCLUDE_DIRS}
+	${OPENGL_INCLUDE_DIR}
+	${SDL2_INCLUDE_DIR}
+	${CMAKE_SOURCE_DIR}/include	
+)
 
-TARGET_LINK_LIBRARIES(	ouzo 
-			${FREETYPE_LIBRARIES}
-			${FREEIMAGE_LIBRARIES}
-			${GLEW_LIBRARIES}
-			${OPENGL_gl_LIBRARY}
-			${SDL2_LIBRARY}	)
+TARGET_LINK_LIBRARIES(
+	ouzo 
+	${FREETYPE_LIBRARIES}
+	${FREEIMAGE_LIBRARIES}
+	${GLEW_LIBRARIES}
+	${OPENGL_gl_LIBRARY}
+	${SDL2_LIBRARY}
+)
 
 IF(WIN32)
-	INCLUDE_DIRECTORIES(${DirectX_D3D11_INCLUDE_DIR})
-	TARGET_LINK_LIBRARIES(ouzo ${DirectX_D3D11_LIBRARY})
+	INCLUDE_DIRECTORIES(${DirectX_D3D9_INCLUDE_DIR})
+	TARGET_LINK_LIBRARIES(ouzo ${DirectX_D3D9_LIBRARY})
 ENDIF()
