Working D3D texture loader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,13 @@ TARGET_LINK_LIBRARIES(
 )
 
 IF(WIN32)
-	INCLUDE_DIRECTORIES(${DirectX_D3D9_INCLUDE_DIR})
-	TARGET_LINK_LIBRARIES(ouzo ${DirectX_D3D9_LIBRARY})
+	INCLUDE_DIRECTORIES(
+		${DirectX_D3D9_INCLUDE_DIR}
+		${DirectX_D3DX9_INCLUDE_DIR}
+	)
+	TARGET_LINK_LIBRARIES(
+		ouzo
+		${DirectX_D3D9_LIBRARY}
+		${DirectX_D3DX9_LIBRARY}
+	)
 ENDIF()
