The game now runs as a Win32 application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,11 @@ ENDMACRO()
 GROUP_SOURCES("src")
 GROUP_SOURCES("include")
 
-ADD_EXECUTABLE(ouzo ${OUZO_SOURCE_FILES})
+IF(WIN32)
+	ADD_EXECUTABLE(ouzo WIN32 ${OUZO_SOURCE_FILES})
+ELSE()
+	ADD_EXECUTABLE(ouzo ${OUZO_SOURCE_FILES})
+ENDIF()
 
 # Fetch modules from ./cmake/Modules
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules")
