Actually removed Xcode stuff

--- a/.gitignore
+++ b/.gitignore
@@ -286,6 +286,8 @@ install_manifest.txt
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+*.xcodeproj
+
 ## Build generated
 build/
 DerivedData
