Added OpenAL to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DOUZO_DEBUG")
 MARK_AS_ADVANCED(CLEAR FREEIMAGE_INCLUDE_DIRS)
 
 FIND_PACKAGE(OpenGL REQUIRED)
+FIND_PACKAGE(OpenAL REQUIRED)
 FIND_PACKAGE(SDL2 REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 FIND_PACKAGE(GLM REQUIRED)
@@ -48,6 +49,7 @@ FIND_PACKAGE(FreeImage REQUIRED)
 FIND_PACKAGE(Freetype REQUIRED)
 
 INCLUDE_DIRECTORIES(	
+	${OPENAL_INCLUDE_DIR}
 	${FREETYPE_INCLUDE_DIRS} 
 	${FREEIMAGE_INCLUDE_DIRS} 
 	${GLM_INCLUDE_DIRS}
@@ -58,7 +60,8 @@ INCLUDE_DIRECTORIES(
 )
 
 TARGET_LINK_LIBRARIES(
-	ouzo 
+	ouzo
+	${OPENAL_LIBRARY}
 	${FREETYPE_LIBRARIES}
 	${FREEIMAGE_LIBRARIES}
 	${GLEW_LIBRARIES}
