Simple sound engine & Test background music

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,33 +39,35 @@ SET(BIN_DIR ${CMAKE_SOURCE_DIR}/bin)
 SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DOUZO_DEBUG")
 
 MARK_AS_ADVANCED(CLEAR FREEIMAGE_INCLUDE_DIRS)
+MARK_AS_ADVANCED(CLEAR SDLMIXER_INCLUDE_DIR)
+MARK_AS_ADVANCED(CLEAR SDLMIXER_LIBRARY)
 
 FIND_PACKAGE(OpenGL REQUIRED)
-FIND_PACKAGE(OpenAL REQUIRED)
 FIND_PACKAGE(SDL2 REQUIRED)
+FIND_PACKAGE(SDL2_mixer REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 FIND_PACKAGE(GLM REQUIRED)
 FIND_PACKAGE(FreeImage REQUIRED)
 FIND_PACKAGE(Freetype REQUIRED)
 
 INCLUDE_DIRECTORIES(
-	${OPENAL_INCLUDE_DIR}
 	${FREETYPE_INCLUDE_DIRS} 
 	${FREEIMAGE_INCLUDE_DIRS} 
 	${GLM_INCLUDE_DIRS}
 	${GLEW_INCLUDE_DIRS}
 	${OPENGL_INCLUDE_DIR}
 	${SDL2_INCLUDE_DIR}
+	${SDLMIXER_INCLUDE_DIR}
 	${CMAKE_SOURCE_DIR}/include	
 )
 
 TARGET_LINK_LIBRARIES(
 	ouzo
-	${OPENAL_LIBRARY}
 	${FREETYPE_LIBRARIES}
 	${FREEIMAGE_LIBRARIES}
 	${GLEW_LIBRARIES}
 	${OPENGL_gl_LIBRARY}
 	${SDL2_LIBRARY}
 	${SDL2MAIN_LIBRARY}
+	${SDLMIXER_LIBRARY}
 )
